Began fixing indicators

--- a/.gitignore
+++ b/.gitignore
@@ -280,6 +280,7 @@ Assets/Materials
 Assets/Resources
 Assets/Meshes
 Assets/Scenes
+Assets/Prefabs
 Assets/Shaders
 Assets/StreamingAssets
 Assets/Textures
