--- a/.gitignore
+++ b/.gitignore
@@ -276,6 +276,7 @@ UnityPackageManager/
 Assets/Animations
 Assets/Audio
 Assets/Fonts
+Assets/Art
 Assets/Materials
 Assets/Resources
 Assets/Meshes
